[package]
name = "rove-scan"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "defmt",
    "executor-thread",
] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-net = { version = "0.9.1", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
    "dns",
    "defmt",
    "auto-icmp-echo-reply",
] }
embassy-rp = { version = "0.10.0", features = [
    "critical-section-impl",
    "defmt",
    "rp235xa",
    "time-driver",
    "imagedef-secure-exe",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
fixed = { version = "1.31.0", features = ["defmt"] }
heapless = { version = "0.9.3", features = ["defmt", "embedded-io-v0.7"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
postcard = { version = "1.1.3", default-features = false, features = ["defmt"] }
rand = { version = "0.9.4", default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
static_cell = "2.1.1"

[build-dependencies]
dotenvy = "0.15.7"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

wildcard_imports = "allow"
future_not_send = "allow"
allow_attributes_without_reason = "forbid"


[[bin]]
name = "rove-scan"
path = "src/main.rs"
test = false
bench = false
